# metabase_file_import

./: README.md  example.csv  example.xlsx  pyproject.toml
metabase_file_import/: config-example.py  main.py
